Model Examples and LLM improvements (#600)
* now when changing database in a card the query will retrigger correctly

* adding schema sampling with apoc.meta.data and changing system prompt

* cleaning code and adding examples management

* starting working on plugging examples to the model

* examples plugged to state and to the modelClient to add the example prompy

* fixed examples in modelCLient because the there was a missing edge case

* added Q&A form for AI training

* Updated styling, added validation

* validation on q&a form (to talk with Marius about UX and styling)

* watching smells on sonarqube

* Question Answer form updated with tailwind and needle styling

* WIP creating edit Q&A modal

* working on examples modal

* WIP trying to get index prop to pass for ExampleEditorModal to work properly

* fix

* WIP

* latest

* plugging modelExamples table to the state and changing folder structure

* Issue with addModelExample action call

* working on model examples and fixing prompt behaviour

* Paginated table implemented. Needs styling.

* pagination done

* Added cypher code editor. No line numbers right now - would be useful. Also no label for cypher editor

* Added loading button when saving, error message if cypher editor is empty upon submission, removed legacy code

* latest

* ready for review

* changing prompt

* Updated. Fixed editing. Ready for Review

* fixing code smells

* WIP

* WIP ExampleDisplayTable2

* styling and pagination needed

* table done with styling, pagination

* deleted old table

* code smell 2/7 check

* check smells

* Checking smells

* moving component inside const

* Table ready for review

* Added initial pageSize

* Fixed instructions on 'tweak model' screen

* Fixed instructions on 'tweak model' screen

* Got rid of show number of queries per page

* checking code smells

* removing useless row from task definition

* changin

--- a/docs/modules/ROOT/pages/user-guide/extensions/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/index.adoc
@@ -17,7 +17,7 @@ The currently available extensions in NeoDash are:
 - link:advanced-visualizations[Advanced Visualizations]
 - link:rule-based-styling[Rule-based Styling]
 - link:report-actions[Report Actions]
-- link:natural-language-queries[Natural Language Queries]
+- link:natural-language-queries[Text2Cypher - Natural Language Queries]
 - link:forms[Forms]
 
 == Types of Extensions
