--- a/docs/modules/ROOT/pages/user-guide/extensions/natural-language-queries.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/natural-language-queries.adoc
@@ -1,25 +1,23 @@
-= Natural Language Query Generation in NeoDash!
+= Text2Cypher - Natural Language Queries
 Use natural language to generate Cypher queries in NeoDash. Connect to an LLM through an API, and let NeoDash use your database schema + the report types to generate queries automatically.
 
-== Natural Language Queries
-Natural Language Queries feature allows users to interact with NeoDash using natural language to generate Cypher queries for querying Neo4j graph databases. 
+== How it works
+This extension feature allows users to interact with NeoDash using natural language to generate Cypher queries for querying Neo4j graph databases. 
 This integration leverages Language Models (LLMs) to interpret user inputs and generate Cypher queries based on the provided schema definition.
 
 == Configuration
 To enable Natural Language Queries in NeoDash, follow these configuration steps:
 
 1. Open NeoDash and navigate to the "Extensions" section in the left sidebar.
-2. Locate the "Natural Language Queries" extension and click on it to activate it.
-3. Once activated, a new button will appear in the sidebar(see image below). Click on the button to open the configuration window.
+2. Locate the "Text2Cypher" extension and click on it to activate it.
+3. Once activated, a new button will appear on top of the screen, with a red exclamation mark (⚠️). Click this button.
 4. In the configuration window, you will be prompted to provide the necessary information to connect to the Language Model (LLM). Enter the model provider, API key, deployment url if needed by the model provider, and select the desired model to use.
 5. After providing the required information, click on the "Start Querying" button to finalize the configuration.
-
-image::extensionbutton.png[Extension Button enables Natural Language Queries button in the sidebar]
 
 image::llmconfiguration.png[Configuration settings for the Natural Language Queries extension]
 
 == Usage
-Once the Natural Language Queries extension is configured, you can start using it in your NeoDash reports. Here's how:
+Once the extension is configured, you can start using it in your NeoDash reports. Here's how:
 
 1. Open the Report settings for the desired report.
 2. In the report settings, you will find a toggle switch located above the editor. This switch allows you to toggle between Cypher and English languages.
@@ -33,7 +31,21 @@ This allows you to review and modify the generated Cypher query before execution
 
 image::englisheditor.png[Example of the English editor in NeoDash]
 
-=== Here is how it works behind the scenes:
+== Improving Accuracy with Custom Prompting
+To boost the accuracy of the language model, you can provide your own example queries to be fed into the prompt.
+Specifying queries specific to your data model & use-cases can significantly improve the quality of Text2Cypher translations.
+
+To access the model examples screen, open up the settings for the extensions.
+After specifying the provider and model, click the "Tweak Prompts" button on the bottom-left of the window.
+This leads you to the example interface:
+
+image::llm-examples.png[Custom Examples for your prompt]
+
+In this interface, you can specify one or more examples that are sent to the language model.
+An example consists of both a Cypher query, and a natural language equivalent of that query.
+You can create as many examples as you want, but keeping them close to your user queries will yield best results.
+
+== Underlying Functionality
 * Retrieve the Schema: The system prompts at the beginning of the interaction to retrieve the database schema. This ensures that the generated queries adhere to the provided schema and available relationship types and properties.
 
 * Prompting in English: Once the schema is retrieved, you can start prompting your queries in plain English. NeoDash, powered by the LLM, will interpret your English query and generate the corresponding Cypher query based on the provided schema.
