Update Configuration Docs
SSO enabled for editor mode

--- a/docs/modules/ROOT/pages/developer-guide/configuration.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/configuration.adoc
@@ -42,7 +42,7 @@ will look like this:
 |===
 |Name |Type |Default Value |Description
 |ssoEnabled |boolean |false |If enabled, lets users connect to Neo4j
-using SSO. This requires the app to be running in standalone mode, and a
+using SSO. This requires a
 valid ssoDiscoveryUrl to be set.
 
 |ssoProviders |List |[] |When using multiple SSO providers on the database, you can configure the list of providers (by id) to be used on Neodash. If empty, all providers will be displayed.
