--- a/docs/modules/ROOT/pages/user-guide/dashboards.adoc
+++ b/docs/modules/ROOT/pages/user-guide/dashboards.adoc
@@ -118,6 +118,8 @@ standalone deployment of NeoDash. See Publishing for more infomation.
 === Dashboard Access Control
 Within this feature, you can manage dashboard access by leveraging the native Neo4j Role-based Access Control (RBAC) functionality. Attach additional labels to the currently selected dashboard node within this window, either by utilizing existing labels in your database or creating new ones, to regulate access permissions. In order for this to work properly, restricting privileges on these labels for certain users with their corresponding roles is needed.
 
+You can find the Dashboard Access Control feature by clicking on the three dots next to the dashboard name in the sidebar and selecting the "Access Control" option.
+
 image::dashboardaccesscontrol.png[Dashboard Access Control]
 
 == Dashboard Settings
