--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -34,6 +34,7 @@
 *** xref:user-guide/extensions/report-actions.adoc[Report Actions]
 *** xref:user-guide/extensions/natural-language-queries.adoc[Text2Cypher - Natural Language Queries]
 *** xref:user-guide/extensions/forms.adoc[Forms]
+*** xref:user-guide/extensions/access-control-management.adoc[Access Control Management]
 ** xref:user-guide/faq.adoc[FAQ]
 * xref:developer-guide/index.adoc[Developer Guide]
 ** xref:developer-guide/build-and-run.adoc[Build & Run]
