--- a/docs/modules/ROOT/pages/user-guide/extensions/access-control-management.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/access-control-management.adoc
@@ -1,12 +1,12 @@
 = Access Control Management
 
-This extension lets you manage access control for roles and users, letting you assign, users to roles as well as controlling which node labels can be read by a user.
+This extension lets you manage access control for roles and users, letting you assign users to roles as well as controlling which node labels can be read by a user.
 
 This extension is only visible to users with the role of "Administrator" or "Super User". Enabling this extension will allow the admin user to manage the labels of the roles in the database and then attach them to the users.
 
 
 == Using the Extension ==
-If you have logged in to Neodash as an admin user, you will be able to enable the extension in the "Extensions" menu. Clicking on this extension will give the user an new button next to settings button in the main dashboard page. If the user click on this button, a menu will appear with all the roles in the database. 
+If you have logged in to Neodash as an admin user, you will be able to enable the extension in the "Extensions" menu. Clicking on this extension will give the user a new button next to the settings button in the dashboard header. If the user click on this button, a menu will appear with all the roles in the database. 
 
 image::rolesmenu.png[Role menu]
 
