Add RBAC extensions and dashboard access management (#793)
* added the button and the new modal into the sidebar.

* the access feature is almost done, now you can add labels to the db on a specific dashboard Node and remove them, still small thing left to fix

* added logic to showcase correct labels from the db for each dashboard + new design for the chips and add button

* quick design update + code refactor

* changing from APOC to full cypher with string interpolation to prevent compatibility problem

* added logic for handling issues with cleaning the state of the TextInput & creating a new label with same capital letter as existing labels. Also, added doc

* removed not needed import

* fixing code smells from SonarQube

* Added skeleton for RBAC label button

* Re-added forms extension

* added new components and new logic

* Added check for handling no access to view roles

* the modal structure is in place , added all dropdowns + updated useEffect

* small fix for the dropdown

* Added retrieval of allow/denylists

* Minor fixes

* added logic for users to be selected and added them in the handleSave logic as well

* Style fixes, aligned naming

* Iterating on assignment/revoking of privileges

* added new images and doc for the new features

* added img for the modal

* Docs

* added new comment, removed text from button and added null to the where clause in the query

* Handling grants/denies for labels, big code cleanup

* removed unnecessary imports and corrected misspellings

* Added role assignment logic

* Added in artificial delay to assign roles

* Updated docs and naming of the extension

* updated the query and fixed bug for fetching allowDenyList whenever selecting any db, not only just neo4j

* added 2 pics for access control that needs to be reviewed which one is better or take a completely new pic.

* Clean up files, final fixes to phrasing in docs

* Skip flaky tests

* Removed

--- a/docs/modules/ROOT/pages/user-guide/dashboards.adoc
+++ b/docs/modules/ROOT/pages/user-guide/dashboards.adoc
@@ -3,7 +3,7 @@
 In NeoDash, a dashboard consists of several pages, each of which can
 consist of multiple reports.
 
-image::dashboard2.png[Dashboard]
+image::dashboardnew.png[Dashboard]
 
 As an example: The screenshot above shows a dashboard with three pages:
 `Breweries`, `Beer Ratings` and `Styles`. The dashboard title `My
@@ -21,7 +21,7 @@ dashboard or open an existing one (if available). After being connected,
 the buttons on the sidebar can be used to save, load or share a
 dashboard.
 
-image::saveloadshare.png[Save/Load/Share Button]
+image::dashboardnewsettings.png[Save/Load/Share Button]
 
 === Save a Dashboard
 
@@ -114,6 +114,15 @@ database credentials, which can be a security risk.
 When creating a NeoDash deployment on a production database, it is not
 recommended to use the `Share' feature. Rather, set up a dedicated
 standalone deployment of NeoDash. See Publishing for more infomation.
+
+=== Dashboard Access Control
+With this feature, you can manage dashboard access by leveraging the native Neo4j Role-based Access Control (RBAC) functionality. Attach additional labels to the currently selected dashboard node within this window, either by utilizing existing labels in your database or creating new ones, to regulate access permissions. 
+
+You can find the Dashboard Access Control feature by clicking on the three dots next to the dashboard name in the sidebar and selecting the "Access Control" option.
+
+> This approach should be used together with restricted privileges on labels, assigned to certain roles. See link:../extensions/access-control-management[Access Control Management] for details.
+
+image::dashboardaccesscontrol.png[Dashboard Access Control]
 
 == Dashboard Settings
 
