--- a/docs/modules/ROOT/pages/user-guide/extensions/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/index.adoc
@@ -19,6 +19,7 @@ The currently available extensions in NeoDash are:
 - link:report-actions[Report Actions]
 - link:natural-language-queries[Text2Cypher - Natural Language Queries]
 - link:forms[Forms]
+- link:access-control-management[Access Control Management]
 
 == Types of Extensions
 
