Added banner to all docs pages referring to new docs

--- a/docs/modules/ROOT/pages/developer-guide/deploy-a-build.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/deploy-a-build.adoc
@@ -1,3 +1,5 @@
+include::../banner.adoc[]
+
 = Deploy a Build
 If you have a pre-built NeoDash application, you can easily deploy it on an any webserver.
 A NeoDash build is "just" a collection of HTML, CSS and JavaScript files, so it can run virtually anywhere.
