--- a/docs/modules/ROOT/pages/developer-guide/index.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/index.adoc
@@ -1,3 +1,5 @@
+include::../banner.adoc[]
+
 = Developer Guide
 
 This guide contains information for developers looking to deploy NeoDash, or extend it for their own needs. 
