--- a/docs/modules/ROOT/pages/user-guide/extensions/access-control-management.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/access-control-management.adoc
@@ -1,3 +1,5 @@
+include::../../banner.adoc[]
+
 = Access Control Management
 
 This extension lets you manage access control for roles and users, letting you assign users to roles as well as controlling which node labels can be read by a user.
