--- a/docs/modules/ROOT/pages/user-guide/reports/circle-packing.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/circle-packing.adoc
@@ -1,3 +1,5 @@
+include::../../banner.adoc[]
+
 = Circle Packing
 
 link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
