--- a/docs/modules/ROOT/pages/user-guide/access-control.adoc
+++ b/docs/modules/ROOT/pages/user-guide/access-control.adoc
@@ -1,3 +1,5 @@
+include::../banner.adoc[]
+
 = Access Control
 
 The Access Control feature in NeoDash is a security measure that allows Users with write access or higher privileges to manage who has access to specific dashboards.
