--- a/docs/modules/ROOT/pages/user-guide/extensions/advanced-visualizations.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/advanced-visualizations.adoc
@@ -1,3 +1,5 @@
+include::../../banner.adoc[]
+
 = Advanced Visualizations
 
 Advanced visualizations let you extend your dashboard with complex, powerful visualizations beyond the standard visualizations.
