--- a/docs/modules/ROOT/pages/user-guide/extensions/workflows.adoc
+++ b/docs/modules/ROOT/pages/user-guide/extensions/workflows.adoc
@@ -1,3 +1,5 @@
+include::../../banner.adoc[]
+
 = Workflows
 
 Introducing an advanced extension for creating, managing, and running workflows with Cypher queries. Simplify ETL flows, execute complex query chains, and run graph data science workloads effortlessly from Neodash.
