--- a/docs/modules/ROOT/pages/user-guide/reports/parameter-select.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/parameter-select.adoc
@@ -1,3 +1,5 @@
+include::../../banner.adoc[]
+
 = Parameter Select
 Parameter select reports provide you with an easy way to add
 interactivity into your dashboards.
