--- a/docs/modules/ROOT/pages/user-guide/reports/sankey.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/sankey.adoc
@@ -1,3 +1,5 @@
+include::../../banner.adoc[]
+
 = Sankey Chart
 
 link:../../extensions/advanced-visualizations[label:Advanced&nbsp;Visualization[]]
