--- a/docs/modules/ROOT/pages/user-guide/publishing.adoc
+++ b/docs/modules/ROOT/pages/user-guide/publishing.adoc
@@ -2,7 +2,7 @@ include::../banner.adoc[]
 
 = Publishing
 
-include::/banner.adoc[]
+include::../banner.adoc[]
 
 When you are done building a dashboard, you may want to *publish* that
 dashboard for others to view. The workflow for a continuous dashboarding
